--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^6.2.2",
     "react-scroll": "^1.8.9",
     "sass": "^1.59.3"
   },
